2006-08-06  Johan Dahlin  <johan@gnome.org>

	* docs/xsl/html.xsl: Do not use shade.verbatim, set the background
	color and border as a normal html tag to avoid an external
	stylesheet.

2006-08-04  Johan Dahlin  <jdahlin@async.com.br>

	* configure.ac: Post release version bump

=== 2.11.1 ===
2006-08-04  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

	* README: Update, some s/PyGTK/PyGObject/

	* configure.ac:
	* docs/Makefile.am:
	* docs/reference/.cvsignore:
	* docs/reference/entities.docbook.in:
	* docs/reference/pygobject-ref.xml:
	Clean up the build date/version mess I created.
	Now it's created during configure time and properly included in
	the docbook files. Also make sure distcheck passes

2006-08-04  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.in: Add hack to disable libtool checking for g++ and
	g77 (copied from libglade).

2006-07-29  John Finlay  <finlay@moeraki.com>

	* gobject/pygobject.h (pyg_param_gvalue_from_pyobject): Fix define
	to point to the correct function pointer field.

2006-07-29  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygflags.c (pyg_flags_add): idem.

	* gobject/pygenum.c (pyg_enum_add): Give a more explicit error
	message when the gtype is not an enum.

2006-07-25  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygobject.h (init_pygobject_check): Add a macro to easily 
	check the installed pygobject version.

	* gobject/pygflags.c (pyg_flags_add) 
	* gobject/pygenum.c (pyg_enum_add): Duplicate the string before
	sending it to python. Fixes GCC warnings.

2006-07-24  John Finlay  <finlay@moeraki.com>

	* gobject/pygflags.c (pyg_flags_get_first_value_name) 
	(pyg_flags_get_first_value_nick): Avoid segfault when
	g_flags_get_first_value returns NULL.

2006-07-20  John Finlay  <finlay@moeraki.com>

	* docs/Makefile.am: Make version.xml dependent on config.h
	Make builddate.xml dependent on REFERENCE_DEPS. Add builddate.xml to
	build_stamp and pdf dependencies. Add pdf files to cleanup.
