@@ -8,6 +8,7 @@ datadir=@datadir@
 # pkg-config to get this value.  You might want to use this to
 # install additional headers.
 pygtkincludedir=${includedir}/pygtk-2.0
+fixxref=${datadir}/pygobject/xsl/fixxref.py
 
 Name: PyGObject
 Description: Python bindings for GObject
